--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
