--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
